Big of a refactor. Auth refactored. Finally ran and used the api. It works.