@@ -9,17 +9,18 @@ import jakarta.servlet.http.HttpServletResponse;
 import lombok.RequiredArgsConstructor;
 import org.jspecify.annotations.NonNull;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Component;
 import org.springframework.web.filter.OncePerRequestFilter;
 
 import java.io.IOException;
-import java.util.Collections;
+import java.util.List;
 import java.util.UUID;
 
 @Component
 @RequiredArgsConstructor
-public abstract class JwtFilter extends OncePerRequestFilter {
+public class JwtFilter extends OncePerRequestFilter {
     private final JwtService jwtService;
 
     @Override
@@ -27,7 +28,13 @@ public abstract class JwtFilter extends OncePerRequestFilter {
         String token = getTokenFromCookie(request);
         if (token != null && jwtService.isTokenValid(token)) {
             UUID userId = jwtService.extractUserId(token);
-            var authentication = new UsernamePasswordAuthenticationToken(userId,null, Collections.emptyList());
+            String role = jwtService.extractRole(token);
+            var authorities = List.of(new SimpleGrantedAuthority("ROLE_" + role));
+            var authentication = new UsernamePasswordAuthenticationToken(
+                    userId,
+                    null,
+                    authorities
+            );
             SecurityContextHolder
                     .getContext()
                     .setAuthentication(authentication);
